# pg_sexp

./: Containerfile.asan  Containerfile.benchmark  Containerfile.benchmark-full  Containerfile.benchmark-rust  Containerfile.build  Containerfile.filc  Containerfile.filc-postgres  Containerfile.production  Containerfile.rust  Containerfile.test  Containerfile.timescaledb  Containerfile.valgrind  Makefile  Makefile.filc  README.md  manual.md  pg_sexp.control
rs/: Cargo.toml  pg_sexp_rs.control
rs/src/: lib.rs
sql/: pg_sexp--0.1.0.sql
src/: pg_sexp.c  pg_sexp.h  sexp_debug.h  sexp_gin.c  sexp_io.c  sexp_match.c  sexp_ops.c  sexp_parser.c
test/: benchmark.sql  benchmark_compare.sql  benchmark_full.sql  benchmark_results_path_gin.txt  run_benchmark.sh  test_basic.sql  test_containment.sql  test_optimization_metrics.sql  test_robustness.sql
test/results/: benchmark_baseline_20251207_104545.txt  benchmark_baseline_20251207_105024.txt  benchmark_c_20251207_094201.txt  benchmark_comparison_summary.md  benchmark_production_20251207_103525.txt  benchmark_production_20251207_104105.txt  benchmark_quick_20251206_152456.txt  benchmark_quick_20251206_152700.txt  benchmark_quick_20251206_155213.txt  benchmark_quick_20251206_155243.txt  benchmark_quick_20251206_155428.txt  benchmark_quick_20251206_161000.txt  benchmark_quick_20251206_161008.txt  benchmark_quick_20251206_224019.txt  benchmark_quick_20251207_003356.txt  benchmark_rust_20251207_094233.txt  benchmark_rust_20251207_094333.txt  summary_quick_20251206_152456.txt  summary_quick_20251206_152700.txt  (+5 more)
